--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/node": "17.0.21",
     "@vercel/node": "1.13.0",
     "faker": "5.5.3",
-    "prisma": "3.15.2",
+    "prisma": "^3.15.2",
     "ts-node": "10.5.0",
     "typescript": "4.5.5"
   },
